import requests
import time
import threading
import asyncio
import websockets
import json
import sys

# ì„œë¹„ìŠ¤ë³„ ì ‘ì† ì£¼ì†Œ ì„¤ì •
# (ë¡œì»¬ í™˜ê²½ ê¸°ì¤€, í¬íŠ¸ë²ˆí˜¸ëŠ” ì‘ì„±í•´ì£¼ì‹  ì½”ë“œì™€ ì¼ì¹˜í•´ì•¼ í•©ë‹ˆë‹¤)
EMP_URL = "http://localhost:5001"
REQ_URL = "http://localhost:5002"
PROC_URL = "http://localhost:5003"
NOTI_WS = "ws://localhost:8085"  # ìš”ì²­í•˜ì‹  8085 í¬íŠ¸ ë°˜ì˜

# 1. [Notification] WebSocket ë¦¬ìŠ¤ë„ˆ (ë³„ë„ ìŠ¤ë ˆë“œì—ì„œ ì‹¤í–‰)
async def listen_ws():
    # Requester(ì§ì›ID 1ë²ˆ)ìœ¼ë¡œ ì ‘ì†í•œë‹¤ê³  ê°€ì •
    uri = f"{NOTI_WS}/ws?id=1"
    print(f"[WS] Connecting to {uri}...")
    
    try:
        async with websockets.connect(uri) as websocket:
            print("[WS] Connected! Waiting for notifications...")
            while True:
                # ë©”ì‹œì§€ê°€ ì˜¤ë©´ ìˆ˜ì‹ í•´ì„œ ì¶œë ¥
                msg = await websocket.recv()
                print(f"\n\n[ğŸ”” ì•Œë¦¼ ìˆ˜ì‹ ] {msg}\n")
    except Exception as e:
        print(f"[WS] Connection Error or Closed: {e}")

def start_ws_client():
    # ë¹„ë™ê¸° í•¨ìˆ˜ ì‹¤í–‰ì„ ìœ„í•œ ë˜í¼
    loop = asyncio.new_event_loop()
    asyncio.set_event_loop(loop)
    loop.run_until_complete(listen_ws())

# 2. ë©”ì¸ í…ŒìŠ¤íŠ¸ ì‹œë‚˜ë¦¬ì˜¤
def run_test():
    print("=== ERP í†µí•© í…ŒìŠ¤íŠ¸ ì‹œì‘ ===")

    # (1) ì›¹ì†Œì¼“ ë¦¬ìŠ¤ë„ˆ ìŠ¤ë ˆë“œ ì‹œì‘
    t = threading.Thread(target=start_ws_client, daemon=True)
    t.start()
    time.sleep(2) # ì—°ê²°ë  ë•Œê¹Œì§€ ì ì‹œ ëŒ€ê¸°

    try:
        # (2) ì§ì› ëª©ë¡ í™•ì¸
        print("\n--- [Step 1] Employee Service: ì§ì› ëª©ë¡ ì¡°íšŒ ---")
        res = requests.get(f"{EMP_URL}/employees")
        if res.status_code == 200:
            print(f"Result: {res.json()}")
        else:
            print("Error: ì§ì› ì„œë¹„ìŠ¤ë¥¼ í™•ì¸í•˜ì„¸ìš”.")
            return

        # (3) ê²°ì¬ ìš”ì²­ ìƒì„± (Requester -> Approver)
        print("\n--- [Step 2] Request Service: ê²°ì¬ ìš”ì²­ ìƒì„± ---")
        # ì‹œë‚˜ë¦¬ì˜¤: 1ë²ˆ ì§ì›ì´ 2ë²ˆ ì§ì›ì—ê²Œ ê²°ì¬ ìš”ì²­
        approval_data = {
            "requesterId": 1,
            "title": "í…ŒìŠ¤íŠ¸ ê²°ì¬ ìš”ì²­",
            "content": "í…ŒìŠ¤íŠ¸ ë‚´ìš©ì…ë‹ˆë‹¤.",
            "steps": [
                {"step": 1, "approverId": 2}
            ]
        }
        res = requests.post(f"{REQ_URL}/approvals", json=approval_data)
        if res.status_code == 201:
            req_id = res.json()['requestId']
            print(f"Success! Created Request ID: {req_id}")
        else:
            print(f"Error: {res.text}")
            return
        
        time.sleep(1) # ë°ì´í„° ì „ë‹¬ ëŒ€ê¸°

        # (4) ê²°ì¬ì ëŒ€ê¸°ì—´ í™•ì¸
        print(f"\n--- [Step 3] Processing Service: ê²°ì¬ì(ID:2) ëŒ€ê¸°ì—´ í™•ì¸ ---")
        res = requests.get(f"{PROC_URL}/process/2")
        queue = res.json()
        print(f"Current Queue for Approver 2: {queue}")

        if len(queue) == 0:
            print("ëŒ€ê¸°ì—´ì´ ë¹„ì–´ìˆìŠµë‹ˆë‹¤. gRPC í†µì‹ ì„ í™•ì¸í•˜ì„¸ìš”.")
            return

        # (5) ê²°ì¬ ìŠ¹ì¸ ì²˜ë¦¬
        print(f"\n--- [Step 4] Processing Service: ìŠ¹ì¸ ì²˜ë¦¬ (Approved) ---")
        # ëŒ€ê¸°ì—´ì— ìˆëŠ” í•´ë‹¹ ìš”ì²­ ìŠ¹ì¸
        target_req_id = queue[0]['requestId'] # ìœ„ì—ì„œ ìƒì„±ëœ ID ì‚¬ìš©
        
        process_data = {"status": "approved"}
        res = requests.post(f"{PROC_URL}/process/2/{target_req_id}", json=process_data)
        
        if res.status_code == 200:
            print(f"Processing Result: {res.json()}")
        else:
            print(f"Error: {res.text}")

        print("\n--- [Step 5] ìµœì¢… ì•Œë¦¼ ìˆ˜ì‹  ëŒ€ê¸° (3ì´ˆ) ---")
        time.sleep(3)
        print("\n=== í…ŒìŠ¤íŠ¸ ì¢…ë£Œ ===")

    except Exception as e:
        print(f"\n[Error] í…ŒìŠ¤íŠ¸ ì¤‘ ì˜ˆì™¸ ë°œìƒ: {e}")
        print("ëª¨ë“  ì„œë¹„ìŠ¤(4ê°œ)ê°€ ì‹¤í–‰ ì¤‘ì¸ì§€ í™•ì¸í•´ì£¼ì„¸ìš”.")

if __name__ == "__main__":
    run_test()