import requests
import time
import threading
import asyncio
import websockets
import json
import sys

# --- ì„¤ì • ---
EMP_URL = "http://localhost:5001"
REQ_URL = "http://localhost:5002"
PROC_URL = "http://localhost:5003"
NOTI_WS = "ws://localhost:8085"

# --- ì¶œë ¥ í—¬í¼ í•¨ìˆ˜ ---
def print_header(title):
    print(f"\n{'='*50}")
    print(f"ğŸš€ {title}")
    print(f"{'='*50}")

def print_sub(title):
    print(f"\nğŸ‘‰ {title}")

def print_json(label, data):
    print(f"{label}:")
    # JSONì„ ë“¤ì—¬ì“°ê¸°í•˜ì—¬ ì˜ˆì˜ê²Œ ì¶œë ¥
    print(json.dumps(data, indent=2, ensure_ascii=False))

def print_success(msg):
    print(f"âœ… {msg}")

def print_error(msg):
    print(f"âŒ {msg}")

# --- WebSocket ë¦¬ìŠ¤ë„ˆ ---
async def listen_ws():
    uri = f"{NOTI_WS}/ws?id=1"
    try:
        async with websockets.connect(uri) as websocket:
            print("   (WS ì—°ê²° ì„±ê³µ! ì•Œë¦¼ ëŒ€ê¸° ì¤‘...)")
            while True:
                msg = await websocket.recv()
                print(f"\n\n{'*'*50}")
                print(f"ğŸ”” [ì‹¤ì‹œê°„ ì•Œë¦¼ ìˆ˜ì‹ ]")
                try:
                    data = json.loads(msg)
                    print(json.dumps(data, indent=2, ensure_ascii=False))
                except:
                    print(msg)
                print(f"{'*'*50}\n")
    except Exception as e:
        print(f"   (WS ì—°ê²° ì‹¤íŒ¨: {e})")

def start_ws_client():
    loop = asyncio.new_event_loop()
    asyncio.set_event_loop(loop)
    loop.run_until_complete(listen_ws())

# --- ë©”ì¸ í…ŒìŠ¤íŠ¸ ì‹œë‚˜ë¦¬ì˜¤ ---
def run_test():
    print_header("ERP í†µí•© í…ŒìŠ¤íŠ¸ ì‹œì‘")

    # 1. WebSocket ì—°ê²°
    print_sub("WebSocket ì—°ê²° ì‹œë„ (Requester ID: 1)")
    t = threading.Thread(target=start_ws_client, daemon=True)
    t.start()
    time.sleep(2) 

    try:
        # 2. ì§ì› ëª©ë¡ í™•ì¸
        print_header("Step 1: ì§ì› ëª©ë¡ ì¡°íšŒ (Employee Service)")
        res = requests.get(f"{EMP_URL}/employees")
        if res.status_code == 200:
            print_json("ğŸ“‹ ì§ì› ëª©ë¡", res.json())
        else:
            print_error(f"ì‹¤íŒ¨: {res.text}")
            return

        # 3. ê²°ì¬ ìš”ì²­ ìƒì„±
        print_header("Step 2: ê²°ì¬ ìš”ì²­ ìƒì„± (Request Service)")
        approval_data = {
            "requesterId": 1,
            "title": "ë§¥ë¶ í”„ë¡œ êµ¬ë§¤ ìš”ì²­",
            "content": "ê°œë°œ ì¥ë¹„ê°€ í•„ìš”í•©ë‹ˆë‹¤.",
            "steps": [
                {"step": 1, "approverId": 2}
            ]
        }
        print_json("ğŸ“¤ ìš”ì²­ ë°ì´í„°", approval_data)
        
        res = requests.post(f"{REQ_URL}/approvals", json=approval_data)
        if res.status_code == 201:
            req_id = res.json()['requestId']
            print_success(f"ê²°ì¬ ìš”ì²­ ìƒì„± ì™„ë£Œ! (ID: {req_id})")
        else:
            print_error(f"ì‹¤íŒ¨: {res.text}")
            return
        
        time.sleep(1)

        # 4. ê²°ì¬ì ëŒ€ê¸°ì—´ í™•ì¸
        print_header("Step 3: ê²°ì¬ì ëŒ€ê¸°ì—´ í™•ì¸ (Processing Service)")
        print_sub("ê²°ì¬ì(ID: 2)ì˜ ëŒ€ê¸°ì—´ ì¡°íšŒ ì¤‘...")
        
        res = requests.get(f"{PROC_URL}/process/2")
        queue = res.json()
        
        if len(queue) > 0:
            print_json("ğŸ“¥ ìˆ˜ì‹ ëœ ê²°ì¬ ìš”ì²­", queue)
        else:
            print_error("ëŒ€ê¸°ì—´ì´ ë¹„ì–´ìˆìŠµë‹ˆë‹¤! gRPC í†µì‹ ì„ í™•ì¸í•˜ì„¸ìš”.")
            return

        # 5. ìŠ¹ì¸ ì²˜ë¦¬
        print_header("Step 4: ê²°ì¬ ìŠ¹ì¸ ì²˜ë¦¬ (Processing Service)")
        target_req_id = queue[0]['requestId']
        
        print_sub(f"ìš”ì²­ ID {target_req_id} ìŠ¹ì¸ ì‹œë„...")
        process_data = {"status": "approved"}
        
        res = requests.post(f"{PROC_URL}/process/2/{target_req_id}", json=process_data)
        
        if res.status_code == 200:
            print_success("ìŠ¹ì¸ ì²˜ë¦¬ ì™„ë£Œ!")
            print_json("ê²°ê³¼", res.json())
        else:
            print_error(f"ì‹¤íŒ¨: {res.text}")

        # 6. ì•Œë¦¼ ëŒ€ê¸°
        print_header("Step 5: ìµœì¢… ì•Œë¦¼ ìˆ˜ì‹  ëŒ€ê¸°")
        print("â³ 3ì´ˆê°„ ëŒ€ê¸°í•©ë‹ˆë‹¤...")
        time.sleep(3)
        print_header("í…ŒìŠ¤íŠ¸ ì¢…ë£Œ")

    except Exception as e:
        print_error(f"í…ŒìŠ¤íŠ¸ ì¤‘ ì˜ˆì™¸ ë°œìƒ: {e}")
        print("ğŸ’¡ íŒ: ëª¨ë“  ì„œë¹„ìŠ¤(4ê°œ)ê°€ ì‹¤í–‰ ì¤‘ì¸ì§€ í™•ì¸í•´ì£¼ì„¸ìš”.")

if __name__ == "__main__":
    run_test()